Fixed chat responsivity on mobile, general bugfixes, share screen button

--- a/client/src/screens/MeetingScreen/styles.css
+++ b/client/src/screens/MeetingScreen/styles.css
@@ -14,10 +14,11 @@ body {
 	height: 100%;
 	display: flex;
 	flex-direction: row;
+	position: relative;
 }
 
 .VideoTilesWrapper {
-	flex-grow: 1;
+	width: 100%;
 }
 
 .VideoTiles {
@@ -31,7 +32,6 @@ body {
 #VideoTiles__Row {
 	width: 100%;
 	height: 100%;
-	/* max-height: 300px; */
 	display: flex;
 	align-content: center;
 	flex-wrap: wrap;
@@ -45,8 +45,6 @@ body {
 	border-radius: 20px;
 	align-items: center;
 	justify-content: center;
-	/* width: 320px;
-	height: 240px; */
 }
 
 .VideoTiles__VideoWrapper {
@@ -55,8 +53,6 @@ body {
 	vertical-align: middle;
 	align-self: center;
 	border-radius: 10px;
-	overflow: hidden;
-	display: inline-flex;
 	align-items: center;
 	justify-content: center;
 }
@@ -184,14 +180,25 @@ body {
 }
 
 .ChatBoxWrapper {
-	margin: 10px;
+	position: relative;
+	float: right;
+	padding: 10px;
 	flex-shrink: 0;
 	flex-basis: 300px;
+	flex-grow: 1;
 	max-width: 300px;
-	overflow: hidden;
-	transition: flex-basis 200ms, opacity 200ms;
+	/* overflow: hidden; */
+	transition: flex-basis 200ms, opacity 200ms, display;
 }
 
+@media (max-width: 850px) {
+	.ChatBoxWrapper {
+		position: absolute;
+		top: 0;
+		right: 0;
+		height: 100%;
+	}
+}
 .ChatBoxWrapper.ChatBoxWrapper--hidden {
 	flex-basis: 0;
 	opacity: 0;
